fixed safari spacing issues

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,5 @@
+
+
 /* Banner & search bar*/
 
 main {
@@ -173,10 +175,11 @@ p {
 
 .venue {
   width: 275px;
-  padding: 10px;
+  margin: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  min-height: fit-content;
 }
 
 .venueimage {
@@ -257,6 +260,7 @@ p {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  min-height: fit-content;
 }
 
 .restaurant a {
@@ -274,6 +278,7 @@ p {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  min-height: fit-content;
 }
 
 .flight-details {
